smichel - add basic url shortener functions

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
+server.error.include-message=always
 
+# can be any url base (e.g. http://www.example.com/)
+url-shortener.url.base=http://localhost:8080/
